# CPE416

final_project/: camera.yaml  ekf.yaml  gobilda_description.urdf.xacro  launch_mapping.py  mapper_params_online_async.yaml
install/: local_setup.sh  setup.sh
install/final_project/lib/final_project/: draw_square  teleop_gobilda
install/final_project/share/final_project/: package.sh
install/gobilda_robot/share/gobilda_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gobilda_robot/share/gobilda_robot/cmake/: export_gobilda_robotExport.cmake
install/project1/lib/project1/: roomba
install/project1/share/project1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/project_one/lib/project_one/: bump_and_go
install/project_one/share/project_one/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rplidar_ros/lib/rplidar_ros/: rplidar_composition
install/rplidar_ros/share/rplidar_ros/: package.sh
log/: latest_build
rosbag2_2025_03_04-17_21_08/: metadata.yaml  rosbag2_2025_03_04-17_21_08_0.db3
rosbag2_2025_03_07-13_10_16/: metadata.yaml  rosbag2_2025_03_07-13_10_16_0.db3
src/gobilda_robot/: CMakeLists.txt
src/gobilda_robot/description/urdf/: gobilda_description.urdf.xacro
src/gobilda_robot/hardware/src/: motor.cpp
src/project1/: setup.cfg  setup.py
src/project1/project1/: roomba.py
src/project_one/: setup.py
src/project_one/launch/: launch_bump_and_go1.py
src/project_one/project_one/: bump_and_go.py
(+2 files in other folders)
